# AscendedTribeWatcher

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/modules/: discord_notifier.hpp  log_processor.hpp  ocr_processor.hpp  screen_capture.hpp
src/: main.cpp
src/modules/: discord_notifier.cpp  log_processor.cpp  ocr_processor.cpp  screen_capture.cpp
